tests/rosetta/transpiler/Clojure/ascending-primes.error
run error: exit status 1
Execution error (ClassCastException) at main/gen (ascending-primes.clj:16).
class clojure.lang.PersistentVector cannot be cast to class java.lang.Number (clojure.lang.PersistentVector is in unnamed module of loader 'app'; java.lang.Number is in module java.base of loader 'bootstrap')

Full report at:
/tmp/clojure-11176325766911710434.edn
